--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,17 +9,17 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.1/animate.min.css" />
-  <link rel="stylesheet" href="/css/jquery.bxslider.css?v={{ site.time | date: '%F-%H-%M'}}" />
-  <link rel="stylesheet" href="/css/styles.css?v={{ site.time | date: '%F-%H-%M'}}" />
-  <link rel="stylesheet" href="/css/custom-style.css?v={{ site.time | date: '%F-%H-%M'}}" />
+  <link rel="stylesheet" href="{{site.baseurl}}/css/jquery.bxslider.css?v={{ site.time | date: '%F-%H-%M'}}" />
+  <link rel="stylesheet" href="{{site.baseurl}}/css/styles.css?v={{ site.time | date: '%F-%H-%M'}}" />
+  <link rel="stylesheet" href="{{site.baseurl}}/css/custom-style.css?v={{ site.time | date: '%F-%H-%M'}}" />
 
 	<!-- Touch Icons - iOS and Android 2.1+ 152x152 pixels in size. -->
-	<link rel="apple-touch-icon-precomposed" href="/img/favicon/favicon-152.png">
+	<link rel="apple-touch-icon-precomposed" href="{{site.baseurl}}/img/favicon/favicon-152.png">
 	<!-- IE 10+ "Metro" Tiles - 144x144 pixels in size icon should be transparent -->
 	<meta name="msapplication-TileColor" content="#D83434">
-	<meta name="msapplication-TileImage" content="/img/favicon/favicon-144.png">
+	<meta name="msapplication-TileImage" content="{{site.baseurl}}/img/favicon/favicon-144.png">
 	<!-- For iPad with high-resolution Retina display running iOS ≥ 7: -->
-	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="/img/favicon/favicon-152.png">
+	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{site.baseurl}}/img/favicon/favicon-152.png">
 	<!-- For iPad with high-resolution Retina display running iOS ≤ 6: -->
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/img/favicon/favicon-144.png">
 	<!-- For iPhone with high-resolution Retina display running iOS ≥ 7: -->
