--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,9 +1,9 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-<script src="/js/jquery.bxslider.js"></script>
-<script src="/js/scripts.js"></script>
-<script src="/js/jquery.cookie.js"></script>
-<script src="/js/jquery.simple-cookie-notice.js?v={{ site.time | date: '%F-%H-%M'}}"></script>
+<script src="{{site.baseurl}}/js/jquery.bxslider.js"></script>
+<script src="{{site.baseurl}}/js/scripts.js"></script>
+<script src="{{site.baseurl}}/js/jquery.cookie.js"></script>
+<script src="{{site.baseurl}}/js/jquery.simple-cookie-notice.js?v={{ site.time | date: '%F-%H-%M'}}"></script>
 <script>
  $(document).ready(function(){
    $.fn.simpleCookieNotice({
