--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -69,6 +69,21 @@
     font-weight: 500;
     box-shadow: 0px 1px 3px 1px #d2d2d2;
     margin-left: 20px;
+    line-height: normal;
+}
+.page-links .navbar-default{
+    background: transparent;
+    border: none;
+    min-height: auto;
+    margin-bottom: 0px;
+    margin-top: 18px;
+}
+.page-links .navbar-default .navbar-nav>li>a{
+    padding: 0px 20px;
+    color: #121e2a;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+        font-size: 15px;
 }
 #banner-wrap{
     background: url(../img/background.jpg) no-repeat center center;;
@@ -479,6 +494,7 @@ background-color: #3b5998
     padding-left: 0px;
     display: block;
     margin: 0 auto 20px;
+	display: none;
 }
 #page-wrap h3 {
     font-size: 24px
@@ -552,9 +568,17 @@ background-color: #3b5998
 }
 .page-links {
     text-align: center;
-    margin-top: 20px;
+    margin-top: 15px;
+}
+.page-links .navbar-default{
+     margin-top: 0px;   
+}
+.page-links .navbar-header {
+    padding-top: 0px; 
 }
 .page-links ul li {
+    display: block;
+    text-align: left;
     float: none;
     line-height: 40px;
 }
@@ -563,6 +587,21 @@ background-color: #3b5998
 }
 .page-links ul li a#login-btn{
     margin-left: 10px;
+}
+.navbar-collapse {
+    position: absolute;
+    width: 100%;
+    transition: 0.5s;
+    z-index: 999998;
+    right: 0px;
+    margin-top: 10px;
+    background: rgba(0,0,0,0.5);
+    border-color: transparent;
+    border: none;;
+}
+.page-links .navbar-default .navbar-nav>li>a{
+        color: #fff;
+    font-weight: normal;
 }
 .testimonial-wrap p {
     line-height: 18px;
