--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -88,9 +88,11 @@
 #banner-wrap{
     background: url(../img/background.jpg) no-repeat center center;;
     background-size: cover;
-    padding: 130px 0px 0px;
     background-position: 100% 100%;
     background-position: center top;
+}
+.banner-wrap-iner{
+        padding: 130px 0px 0px;
 }
 #banner-wrap h2{
     margin-bottom: 10px;
@@ -102,7 +104,6 @@
 }
 #overlay{
     padding-bottom: 50px;
-    background-color: rgba(0,0,0,0.2);
 }
 #overlay h2{
     margin-top: 0px;
@@ -488,7 +489,7 @@ background-color: #3b5998
     font-size: 13px;
 }
 #banner-wrap{
-    padding: 65px 0px 0px; 
+/*    padding: 65px 0px 0px; */
 }
 #banner-wrap #guarantee-img {
     padding-left: 0px;
@@ -581,21 +582,28 @@ background-color: #3b5998
     text-align: left;
     float: none;
     line-height: 40px;
+    padding: 5px 0px;
 }
 .page-links ul li a {
     padding: 0px 10px;
 }
 .page-links ul li a#login-btn{
-    margin-left: 10px;
+    margin-left: 0px;
+    background: transparent; 
+    text-transform: capitalize;
+    font-size: 15px; 
+     box-shadow: 0px 0px 0px 0px #d2d2d2; 
+    padding: 0px 20px;
+
 }
 .navbar-collapse {
     position: absolute;
-    width: 100%;
+    width: 350px;
     transition: 0.5s;
     z-index: 999998;
     right: 0px;
     margin-top: 10px;
-    background: rgba(0,0,0,0.5);
+    background: rgba(0,0,0,0.7);
     border-color: transparent;
     border: none;;
 }
