--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -90,7 +90,7 @@ html, body {
         font-size: 15px;
 }
 #banner-wrap{
-    background: url(../img/background.jpg) no-repeat center center;;
+    background: url(../img/background.jpg) no-repeat;
     background-size: cover;
     background-position: 100% 100%;
     background-position: center top;
