--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -643,6 +643,11 @@ background-color: #3b5998
 	font-size: 12px;
 }
 }
+@media (max-width: 480px){
+.navbar-collapse {
+    position: absolute;
+    width: 300px;
+}
 @media (min-width: 768px) and (max-width: 991px){
 		.inner-benefits-wrap{
     text-align: center;;
