--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.1/animate.min.css" />
-  <link rel="stylesheet" href="{{site.baseurl}}/css/jquery.bxslider.css?v={{ site.time | date: '%F-%H-%M'}}" />
+    <link rel="stylesheet" href="{{site.baseurl}}/css/flexslider.css?v={{ site.time | date: '%F-%H-%M'}}" />
   <link rel="stylesheet" href="{{site.baseurl}}/css/styles.css?v={{ site.time | date: '%F-%H-%M'}}" />
   <link rel="stylesheet" href="{{site.baseurl}}/css/custom-style.css?v={{ site.time | date: '%F-%H-%M'}}" />
 
