added footer links

--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -670,7 +670,7 @@ background-color: #3b5998
 	padding: 10px 12px;
 	font-size: 12px;
 }
-#gets-wrap,#loans-wrap,#benefits-bottom-wrap,#client-testimonial{
+#gets-wrap,#loans-wrap,#benefits-bottom-wrap,#client-testimonial,#offers-wrap {
     padding: 45px 0px;
 }
 .benefits-inner-wrap{
