--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -74,6 +74,7 @@ html, body {
     box-shadow: 0px 1px 3px 1px #d2d2d2;
     margin-left: 20px;
     line-height: normal;
+    margin-top: -6px;
 }
 .page-links .navbar-default{
     background: transparent;
