--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -636,7 +636,7 @@ background-color: #3b5998
     font-size: 15px; 
      box-shadow: 0px 0px 0px 0px #d2d2d2; 
     padding: 0px 20px;
-
+    margin-top: 0px;
 }
 .navbar-collapse {
     position: absolute;
