--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -74,7 +74,7 @@ html, body {
     font-size: 11px;
     padding: 8px 32px;
     font-weight: 500;
-    box-shadow: 0px 1px 3px 1px #d2d2d2;
+    box-shadow: 0px 2px 1px 1px #bdbdbd;
     margin-left: 20px;
     line-height: normal;
     margin-top: -6px;
@@ -234,7 +234,7 @@ html, body {
     color: #fff;
     border-radius: 4px;
     outline: none;
-    box-shadow: 0px 1px 3px 1px #d2d2d2;
+    box-shadow: 0px 1px 3px 1px #bdbdbd;
     display: inline-block;
     margin-top: 5px;
 }
@@ -252,6 +252,7 @@ html, body {
     background: #fff;
     padding: 30px 0px;
     margin: 40px 0px 30px 0px;
+    box-shadow: 0px 2px 26px 5px #c46a00;
 }
 .loans-wrap-inner span{
     display: block;
@@ -272,6 +273,9 @@ html, body {
     margin-left: 4px;
     font-size: 13px;
     font-weight: normal;
+}
+#loans-wrap .cta{
+        box-shadow: 0px 2px 10px 0px #c46a00;
 }
 .gets-inner-wrap{
        margin: 40px 0px 30px 0px; 
@@ -520,6 +524,9 @@ background-color: #3b5998
     z-index: 9999999999;
     box-shadow: 1px 1px 10px 1px #aca9a9;
 }
+#lender-wrap .cta{
+    box-shadow: 0px 2px 2px 0px #404a57;
+}
 @media (max-width: 767px){
 #page-wrap h1 {
     font-size: 28px;
@@ -644,7 +651,7 @@ background-color: #3b5998
     padding: 0px 20px;
     margin-top: 0px;
 }
-.navbar-collapse {
+.page-links .navbar-collapse {
     position: absolute;
     width: 350px;
     transition: 0.5s;
