--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -703,13 +703,15 @@ background-color: #3b5998
 @media (max-width: 480px){
 .navbar-collapse {
     position: absolute;
-    width: 280px;
+    width: 280px !important;
 }
 }
 @media (max-width: 370px){
 .navbar-collapse {
     position: absolute;
-    width: 250px;
+    width: 250px !important;
+}
+.banner-wrap-iner {
     padding: 140px 0px 0px;
 }
 }
