added map and placeholder for meta tags

--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -101,7 +101,7 @@ html, body {
     height: 100%;
 }
 .banner-wrap-iner{
-        padding: 130px 0px 0px;
+        padding: 13% 0px 0px;
 }
 #banner-wrap h2{
     margin-bottom: 10px;
