--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -477,10 +477,10 @@ background-color: #3b5998
     background-color: rgba(0,0,0,0);
 }
 .lp2-banner-wrap #top-heading{
-    padding: 60px 0px;
+    padding: 0px 0px 60px 0px;
 }
 .lp2-banner-wrap #caption-text{
-    padding: 50px 0px;
+    padding: 15px 0px 0px;
 }
 .lp2-banner-wrap #caption-text p{
   color: #fff !important; 
