added map and placeholder for meta tags

--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -536,6 +536,9 @@ background-color: #3b5998
         width:98%;
     }
 @media (max-width: 767px){
+    #banner-wrap{
+        height: auto;
+    }
 #page-wrap h1 {
     font-size: 28px;
 }
