--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,8 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{{ page.metaDescription }}" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
   <meta name="format-detection" content="telephone=no">
   <!-- <link rel="shortcut icon" href="/img/bv_tree_dark_fav.png" /> -->
   <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
