--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -283,7 +283,7 @@ margin-bottom: 35px;
 .gets-inner-wrap{
        margin: 40px 0px 30px 0px; 
 }
-#gets-wrap{
+#gets-wrap,#client-testimonial-desktop{
     padding: 85px 0px;
 }
 .gets-inner-wrap .steps{
@@ -538,6 +538,9 @@ margin: 0px !important;
     .lp2-banner-wrap #head-wrap{
         width:98%;
     }
+    #client-testimonial-desktop h3{
+        margin-bottom: 50px;
+    }
 @media (max-width: 767px){
 #page-wrap h1 {
     font-size: 28px;
@@ -696,7 +699,7 @@ margin: 0px !important;
 	padding: 10px 12px;
 	font-size: 12px;
 }
-#gets-wrap,#loans-wrap,#benefits-bottom-wrap,#client-testimonial,#offers-wrap {
+#gets-wrap,#loans-wrap,#benefits-bottom-wrap,#client-testimonial,#offers-wrap,#client-testimonial-desktop{
     padding: 45px 0px;
 }
 .benefits-inner-wrap{
